--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,12 @@
 CC=gcc
 ww=aa
 
-all: clean
-	$(CC) --std=c99 -g -o test -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework.c main.c manager_redis_mongo.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
+new: clean
+	$(CC) --std=c99 -g -o sstore -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework_redisex.c main.c manager_redisex.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
+
+origin: clean
+	$(CC) --std=c99 -g -o sstore -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework.c main.c manager_redis_mongo.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
+
 
 e: clean
 	$(CC) --std=c99 -I/usr/local/include -I/usr/include -L/usr/local/lib -L/usr/lib -o e e.c -lmongoc -lm -llua
@@ -14,4 +18,4 @@ of:
 	$(CC) --std=c99 -o of -I/usr/local/include -L/usr/local/lib -L. manager_redis_mongo.c object_framework.c -lmongoc -lhiredis
 
 clean:
-	rm e l of -rf
+	rm sstore test e l of -rf
