--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CC=gcc
 ww=aa
 
 rex: clean
-	$(CC) --std=c99 -g -o sstore -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework_rex.c main.c manager_reex.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
+	$(CC) --std=c99 -g -o sstore -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework_rex.c main.c manager_rex.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
 
 rm: clean
 	$(CC) --std=c99 -g -o sstore -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework_rm.c main.c manager_rm.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
