--- a/src/Makefile
+++ b/src/Makefile
@@ -3,10 +3,10 @@ BINDIR=../bin
 BINNAME=sstore
 
 rex: clean
-	$(CC) --std=c99 -g -o $(BINDIR)/$(BINNAME) -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework_rex.c main.c manager_rex.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
+	$(CC) --std=c99 -g -o $(BINDIR)/$(BINNAME)-rex -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework_rex.c main.c manager_rex.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
 
 rm: clean
-	$(CC) --std=c99 -g -o $(BINDIR)/$(BINNAME) -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework_rm.c main.c manager_rm.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
+	$(CC) --std=c99 -g -o $(BINDIR)/$(BINNAME)-rm -I/usr/include -L. -L/usr/local/lib  mapex.c util.c object_framework_rm.c main.c manager_rm.c input_generator.c -lm -levent -lhiredis -lmongoc -llua
 
 
 e: clean
@@ -19,4 +19,4 @@ of:
 	$(CC) --std=c99 -o of -I/usr/local/include -L/usr/local/lib -L. manager_redis_mongo.c object_framework.c -lmongoc -lhiredis
 
 clean:
-	rm $(BINDIR)/$(BINNAME) test e l of -rf
+	rm $(BINDIR)/$(BINNAME)* test e l of -rf
